元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -68,9 +68,9 @@
         </a>
       </div>
       <div class="row    row-center ">
-        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-rb"><img
-          ng-src="img/account/contactus.png" alt="">
-          <p>联系客服</p>
+        <a ng-href="#/collect" nav-direction=forward class="col padding-top border-rb"><img
+          ng-src="img/account/order.png" alt="">
+          <p>我的收藏</p>
         </a>
         <a ng-href="#/signin" nav-direction=forward class="col padding-top border-rb"><img
           ng-src="img/account/data.png" alt="">
@@ -82,9 +82,10 @@
         </a>
       </div>
       <div class="row    row-center ">
-        <a ng-href="#/collect" nav-direction=forward class="col padding-top border-r"><img
-          ng-src="img/account/order.png" alt="">
-          <p>我的收藏</p>
+
+        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-r"><img
+          ng-src="img/account/contactus.png" alt="">
+          <p>联系客服</p>
         </a>
         <a ng-href="" nav-direction=forward class="col padding-top ">
 
