--- a/www/css/main.css
+++ b/www/css/main.css
@@ -171,7 +171,7 @@
   font-size: 1rem !important;
 }
 
-#revieworder a.address {
+#revieworder a.address, #orderdetails a.address{
   background: url('../img/account/state@1.png') #ffffff repeat-x bottom;
   background-size: 25% 0.3rem;
 }
