--- a/www/templates/account/orderdetails.html
+++ b/www/templates/account/orderdetails.html
@@ -8,34 +8,41 @@
   </ion-nav-title>
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="orderdetails">
     <ion-list>
+      <ion-item>
+        <h2>订单号 : {{orderInfo.order_no}} <span class="item-note assertive">{{orderInfo.order_status=="created"?"未支付":(orderInfo.order_status=="payed"?"已支付":(orderInfo.order_status=="complete"?"已完成":"退单"))}}</span></h2>
+      </ion-item>
+      <p></p>
       <a ng-href="" class="item item-icon-left item-icon-right item-borderless address">
         <i class="icon ion-ios-location-outline"></i>
-        <h2>{{deliveryAddress.consignee}} <span class="padding-left">{{deliveryAddress.tel}}</span></h2>
-        <p class="text-wrap">{{deliveryAddress.province + deliveryAddress.city + deliveryAddress.area +
-          deliveryAddress.address}}</p>
-        <i class="icon ion-ios-arrow-right grey"></i>
+        <h2>{{orderInfo.consignee}} <span class="padding-left">{{orderInfo.tel}}</span></h2>
+        <p class="text-wrap">{{orderInfo.province + orderInfo.city + orderInfo.area +
+          orderInfo.address}}</p>
+
       </a>
 
     </ion-list>
     <p></p>
     <ion-list>
       <ion-item class="item-divider light-bg">商品清单</ion-item>
-      <ion-item ng-repeat="item in reviewOrder.cartArr | filter : {checked:true} "
+      <ion-item ng-repeat="item in orderdetails"
                 class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="{{item.scGoodsInfo.image}}" alt="" ui-sref="productdetails" nav-direction=forward>
-        <h2>{{item.scGoodsInfo.goods_name}}</h2>
-        <p class="text-wrap">{{item.scGoodsInfo.goods_intro}}</p>
-        <p class="row row-center"><span class="col-75 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
-          class="energized">{{item.price.split('.')[1] }}</span></span> <span
+        <img ng-src="{{item.image}}" alt="" ui-sref="productdetails({id:item.goods_id})" nav-direction=forward>
+        <h2>{{item.goods_name}}</h2>
+        <p class="text-wrap">{{item.goods_intro}}</p>
+        <p class="row row-center"><span
+          class="col-75 energized">￥<strong>{{item.goods_price.split('.')[0] }}.</strong><span
+          class="energized">{{item.goods_price.split('.')[1] }}</span></span> <span
           class="item-note">数量 : {{item.goods_qty}}件</span></p>
       </ion-item>
-
+      <ion-item>
+        <h2>订单总额 : <strong class="item-note assertive">￥{{orderInfo.goods_amount}}</strong></h2>
+      </ion-item>
+      <ion-item class=" light-bg padding-right">
+        <h2 class="text-right  ">实际付款 : <span class="assertive">￥{{orderInfo.real_amount}}</span></h2>
+        <p class="text-right  ">下单时间 : {{orderInfo.create_time  * 1000 | date:'yyyy.MM.dd HH:mm'}}</p>
+      </ion-item>
     </ion-list>
+
   </ion-content>
-  <ion-footer-bar class="shoppingcart-footer-bar">
-    <div class="row row-no-padding row-center  ">
-      <span class="col-60 padding-left">总金额 :<span class="assertive">￥ <strong>{{reviewOrder.goodsAmount.toString().split('.')[0] }}.</strong><i>{{reviewOrder.goodsAmount.toString().split('.')[1] }}</i></span></span>
-      </button>
-    </div>
-  </ion-footer-bar>
+
 </ion-view>
