--- a/www/templates/modal/share.html
+++ b/www/templates/modal/share.html
@@ -5,9 +5,17 @@
 
   <ion-content overflow-scroll="false">
     <div class="row row-center text-center">
-      <span class="col iconfont icon-weibiaoti1 balanced" ng-click="weixinShare()"></span>
+      <span class="col iconfont icon-weibiaoti1 balanced" ng-click="weixinShare(0)"></span>
+      <span class="col iconfont icon-weixin royal" ng-click="weixinShare(1)"></span>
       <span class="col iconfont icon-QQ calm"></span>
+      <span class="col iconfont icon-qq1 energized"></span>
     </div>
+    <div class="row text-center">
+      <span class="col">微信好友</span>
+      <span class="col">微信朋友圈</span>
+      <span class="col">QQ好友</span>
+      <span
+      class="col">QQ空间</span></div>
   </ion-content>
   <ion-footer-bar class="nomarginpadding">
     <button ng-click="modal.hide()" class="button button-positive  full-image">取消</button>
