--- a/www/templates/main/productlist.html
+++ b/www/templates/main/productlist.html
@@ -12,10 +12,11 @@
 
   <ion-tabs id="productlist-tab" class="tabs-light tabs-top  " delegate-handle="my-handle-productlist">
     <div class="row row-horizontal-around text-center">
-      <span class="col-15 {{tabIndex==0?'active':''}}" ng-click="selectedTab(0)">综合 <i
+      <span class="col-15 {{tabIndex==0?'active':''}}" ng-click="selectedTab(0,$event)">综合 <i
         class="icon ion-arrow-down-b"></i></span>
-      <span class="col-15 {{tabIndex==1?'active':''}}" ng-click="selectedTab(1)">销量</span>
-      <span class="col-15 {{tabIndex==2?'active':''}}" ng-click="selectedTab(2)">价格 <i class="icon ion-arrow-up-b"></i></span>
+      <span class="col-15 {{tabIndex==1?'active':''}}" ng-click="selectedTab(1,$event)">销量</span>
+      <span class="col-15 {{tabIndex==2?'active':''}}" ng-click="selectedTab(2,$event)">品牌 <i
+        class="icon ion-arrow-down-b"></i></span>
     </div>
 
   </ion-tabs>
@@ -26,11 +27,13 @@
         <ion-refresher on-refresh="getGoodsList(0)" pulling-text="下拉刷新"></ion-refresher>
         <p></p>
         <ion-list>
-          <a ng-repeat="item in synthesizeList" ng-href="#/productdetails/{{item.id}}" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
+          <a ng-repeat="item in synthesizeList" ng-href="#/productdetails/{{item.id}}" nav-direction=forward
+             class="item item-thumbnail-left main-hot-sale">
             <img ng-src="{{item.image}}" alt="">
             <h2>{{item.goods_name}}</h2>
             <p class="text-wrap">{{item.goods_name}}</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
+            <p class="row row-center"><span
+              class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
               class="energized">{{item.price.toString().split('.')[1]}}</span></span> <i
               class="col iconfont icon-gouwuche positive text-right" ng-click="addToCart(item.id,$event)"></i></p>
           </a>
@@ -46,11 +49,13 @@
         <ion-refresher on-refresh="getGoodsList(0)" pulling-text="下拉刷新"></ion-refresher>
         <p></p>
         <ion-list>
-          <a  ng-repeat="item in salesList" ng-href="#/productdetails/{{item.id}}" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
+          <a ng-repeat="item in salesList" ng-href="#/productdetails/{{item.id}}" nav-direction=forward
+             class="item item-thumbnail-left main-hot-sale">
             <img ng-src="{{item.image}}" alt="">
             <h2>{{item.goods_name}}</h2>
             <p class="text-wrap">{{item.goods_name}}</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
+            <p class="row row-center"><span
+              class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
               class="energized">{{item.price.toString().split('.')[1]}}</span></span> <i
               class="col iconfont icon-gouwuche positive text-right" ng-click="addToCart(item.id,$event)"></i></p>
           </a>
@@ -66,11 +71,13 @@
         <ion-refresher on-refresh="getGoodsList(0)" pulling-text="下拉刷新"></ion-refresher>
         <p></p>
         <ion-list>
-          <a  ng-repeat="item in priceList"  ng-href="#/productdetails/{{item.id}}" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
+          <a ng-repeat="item in priceList" ng-href="#/productdetails/{{item.id}}" nav-direction=forward
+             class="item item-thumbnail-left main-hot-sale">
             <img ng-src="{{item.image}}" alt="">
             <h2>{{item.goods_name}}</h2>
             <p class="text-wrap">{{item.goods_name}}</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
+            <p class="row row-center"><span
+              class="col-75 energized">￥<strong>{{item.price.toString().split('.')[0]}}.</strong><span
               class="energized">{{item.price.toString().split('.')[1]}}</span></span> <i
               class="col iconfont icon-gouwuche positive text-right" ng-click="addToCart(item.id,$event)"></i></p>
           </a>
