元亨祥母婴商城

--- a/www/templates/main/productlist.html
+++ b/www/templates/main/productlist.html
@@ -14,7 +14,7 @@
     <div class="row row-horizontal-around text-center">
       <span class="col-15 {{tabIndex==0?'active':''}}" ng-click="selectedTab(0,$event)">综合 <i
         class="icon ion-arrow-down-b"></i></span>
-      <span class="col-15 {{tabIndex==1?'active':''}}" ng-click="selectedTab(1,$event)">销量</span>
+      <span class="col-15 {{tabIndex==1?'active':''}}" ng-click="selectedTab(1,$event,'sales')">销量</span>
       <span class="col-15 {{tabIndex==2?'active':''}}" ng-click="selectedTab(2,$event)">品牌 <i
         class="icon ion-arrow-down-b"></i></span>
     </div>
