--- a/www/templates/popover/my-brand.html
+++ b/www/templates/popover/my-brand.html
@@ -1,12 +1,10 @@
-<ion-popover-view id="my-brand" style="width: 97%;height: 200px;" ng-controller="MyPopover">
+<ion-popover-view id="my-brand" style="width: 97%;height: {{brandlist.length*55}}px;" ng-controller="MyPopover">
   <ion-content overflow-scroll="false">
     <ion-list>
-      <ion-radio ng-model="a" icon="ion-android-done" ng-change="">品牌1
+      <div ng-repeat="item in brandlist">
+      <ion-radio ng-model="brandId"  icon="ion-android-done" ng-change="selectBrand(item.id)">{{item.name}}
       </ion-radio>
-      <ion-radio ng-model="b" icon="ion-android-done" ng-change="">品牌2
-      </ion-radio>
-      <ion-radio ng-model="c" icon="ion-android-done" ng-change="">品牌3
-      </ion-radio>
+      </div>
     </ion-list>
   </ion-content>
 </ion-popover-view>
