--- a/www/templates/popover/my-product.html
+++ b/www/templates/popover/my-product.html
@@ -1,11 +1,14 @@
-<ion-popover-view id="my-product"   ng-controller="MyPopover">
+<ion-popover-view id="my-product" >
   <ion-content overflow-scroll="false">
-    <ion-list >
-      <ion-radio ng-model="a" icon="ion-android-done" ng-change="">综合
+    <ion-list>
+      <ion-radio ng-model="synthesizeradio"  icon="ion-android-done"
+                 ng-change="selectSynthesize('default')">综合
       </ion-radio>
-      <ion-radio ng-model="b" icon="ion-android-done" ng-change="">价格从低到高
+      <ion-radio ng-model="synthesizeradio"  icon="ion-android-done"
+                 ng-change="selectSynthesize('price_up')">价格从低到高
       </ion-radio>
-      <ion-radio ng-model="c" icon="ion-android-done" ng-change="">价格从高到低
+      <ion-radio ng-model="synthesizeradio"  icon="ion-android-done"
+                 ng-change="selectSynthesize('price_down')">价格从高到低
       </ion-radio>
     </ion-list>
   </ion-content>
