--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -15,12 +15,12 @@
           <!--        <i class="icon ion-ios-arrow-right grey"></i>-->
         </a>
         <label class="item item-input ">
-          <span class="input-label"> 姓名 </span>
-          <input type="text" ng-model="userinfo.name" placeholder="请输入姓名" required>
+          <span class="input-label"> 父母姓名 </span>
+          <input type="text" ng-model="userinfo.name" placeholder="请输入父/母姓名" required>
         </label>
         <label class="item item-input ">
           <span class="input-label"> 宝宝姓名 </span>
-          <input type="text" ng-model="userinfo.baby_name" placeholder="请输入宝宝姓名">
+          <input type="text" ng-model="userinfo.baby_name" placeholder="请输入宝宝姓名" required>
         </label>
         <div class="item">
           <div class="row row-no-padding row-center radio">
@@ -40,8 +40,8 @@
           <p class="{{addresspcd?'dark':'grey'}}">{{addresspcd?addresspcd:"请选择地区信息"}}</p>
         </label>
         <label class="item item-input ">
-          <span class="input-label"> 详细地址 </span>
-          <textarea class="col-60" rows="1" ng-model="userinfo.address" placeholder="请输入详细地址"></textarea>
+          <span class="input-label"> 收货地址 </span>
+          <textarea class="col-60" rows="1" ng-model="userinfo.address" placeholder="请输入收货地址"></textarea>
         </label>
 
         <label class="item item-input ">
