元亨祥母婴商城

--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -26,7 +26,7 @@
             <div class="row row-no-padding   text-center row-wrap ">
               <!--     <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>-->
               <a ng-repeat="item in classifyDetails" ng-href="#/productlist/1/{{item.id}}" nav-direction=forward
-                 class="col-33  subdued  padding-top border-b">
+                 class="col-33  subdued  padding-top ">
                 <img ng-src="{{item.image}}" alt=""/>
                 <p class="nowrap">{{item.name}}</p>
               </a>
