元亨祥母婴商城

--- a/www/templates/main/productdetails.html
+++ b/www/templates/main/productdetails.html
@@ -9,7 +9,7 @@
 <!--  <ion-nav-buttons side="right">
     <button class="button iconfont icon-seach  button-clear grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>-->
-  <ion-content overflow-scroll="false" class="stable-bg" id="productdetails">
+  <ion-content overflow-scroll="false" class="stable-bg has-button-footer" id="productdetails">
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="productdetails-slideboximgs" id="productdetails-slide">
       <ion-slide ng-repeat="item in goodsInfo.image_list">
