元亨祥母婴商城

--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -10,7 +10,7 @@
     <form name="organizingdata">
       <ion-list>
         <a ng-click="uploadActionSheet()" class="item item-avatar-right   item-borderless">
-          <img  ng-src="{{imgsPicAddr[0]||head_img}}" class="border-radius-50" alt="">
+          <img  ng-src="{{imgsPicAddr[0]||userinfo.head_img}}" class="border-radius-50" alt="">
           <p class="padding-top">头像</p>
           <!--        <i class="icon ion-ios-arrow-right grey"></i>-->
         </a>
