--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -10,7 +10,7 @@
   <ion-content overflow-scroll="false" class="stable-bg account " has-bouncing="true">
     <div class="row row-center account-top-bg    userinfo ">
       <div class="col-20 padding-left">
-        <img ng-if="userinfo.url" ng-src="{{userinfo.url}}" onerror="this.src='img/head.jpg'" alt=""/>
+        <img ng-if="userinfo.head_img" ng-src="{{userinfo.head_img}}" onerror="this.src='img/head.jpg'" alt=""/>
       </div>
       <div class="col-55 userinfo-details">
         <strong class="light">{{userinfo.name}} <i>{{userinfo.level}} 级会员</i></span>
