--- a/www/templates/account/evaluate.html
+++ b/www/templates/account/evaluate.html
@@ -20,7 +20,7 @@
             <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=5]" ng-click="evaluatestar(5)"class="icon ion-star "></i></p>
         </a>
         <label class="item item-input card item-borderless">
-          <textarea rows="5" ng-model="evaluateinfo.Memo" placeholder="分享您的购买新的" ng-maxlength="300" required></textarea>
+          <textarea rows="5" ng-model="evaluateinfo.Memo" placeholder="分享您的购买心得" ng-maxlength="300" required></textarea>
         </label>
       </div>
       <div class="padding-right text-right positive"><i class="icon ion-ios-camera camera" ng-click="uploadActionSheet()" ></i></div>
