元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -33,10 +33,15 @@
           ng-src="img/account/order.png" alt="">
           <p>我的订单</p>
         </a>
-        <a ng-href="#/mycoupon" nav-direction=forward class="col padding-top border-b"><img
+
+        <a ng-href="#/signin" nav-direction=forward class="col padding-top border-b"><img
+          ng-src="img/account/data.png" alt="">
+          <p>每日签到</p>
+        </a>
+<!--        <a ng-href="#/mycoupon" nav-direction=forward class="col padding-top border-b"><img
           ng-src="img/account/coupon.png" alt="">
           <p>我的优惠卷</p>
-        </a>
+        </a>-->
       </div>
       <div class="row    row-center ">
         <a ng-href="#/mywallet" nav-direction=forward class="col padding-top border-rb"><img
@@ -68,32 +73,30 @@
         </a>
       </div>
       <div class="row    row-center ">
-        <a ng-href="#/collect" nav-direction=forward class="col padding-top border-rb"><img
+        <a ng-href="#/collect" nav-direction=forward class="col padding-top border-r"><img
           ng-src="img/account/order.png" alt="">
           <p>我的收藏</p>
         </a>
-        <a ng-href="#/signin" nav-direction=forward class="col padding-top border-rb"><img
-          ng-src="img/account/data.png" alt="">
-          <p>每日签到</p>
-        </a>
-        <a ng-href="#/questionnaire" nav-direction=forward class="col padding-top border-b"><img
+
+        <a ng-href="#/questionnaire" nav-direction=forward class="col padding-top border-r"><img
           ng-src="img/account/opinion.png" alt="">
           <p>问卷调查</p>
         </a>
-      </div>
-      <div class="row    row-center ">
-
-        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-r"><img
+        <a ng-href="#/contactus" nav-direction=forward class="col padding-top "><img
           ng-src="img/account/contactus.png" alt="">
           <p>联系客服</p>
         </a>
-        <a ng-href="" nav-direction=forward class="col padding-top ">
-
-        </a>
-        <a ng-href="" nav-direction=forward class="col padding-top ">
-
-        </a>
       </div>
+<!--      <div class="row    row-center ">
+
+
+        <a ng-href="" nav-direction=forward class="col padding-top ">
+
+        </a>
+        <a ng-href="" nav-direction=forward class="col padding-top ">
+
+        </a>
+      </div>-->
     </div>
 
     </div>
